--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -15,21 +15,21 @@
 	<body class="text-center">
 		<form class="form-signin" action="/dashboard" method="post">
 			<img class="mb-4" src="../static/asserts/img/bootstrap-solid.svg" alt="" width="72" th:src="@{/asserts/img/bootstrap-solid.svg}" height="72">
-			<h1 class="h3 mb-3 font-weight-normal">Please sign in</h1>
-			<p style="color:red" th:text="${msg}" ></p>
-			<label class="sr-only" >Username</label>
-			<input type="text" class="form-control" name="username" placeholder="Username" required="" autofocus="">
-			<label class="sr-only">Password</label>
-			<input type="password" name="password" class="form-control" placeholder="Password" required="">
+			<h1 class="h3 mb-3 font-weight-normal" th:text="#{index.tip}">Please sign in</h1>
+			<p style="color:red" th:text="${msg}" th:if="${not #strings.isEmpty(msg)}"></p>
+			<label class="sr-only" th:text="#{index.username}">Username</label>
+			<input type="text" class="form-control" name="username" th:placeholder="#{index.username}" placeholder="Username" required="" autofocus="">
+			<label class="sr-only" th:text="#{index.password}">Password</label>
+			<input type="password" name="password" class="form-control" th:placeholder="#{index.password}" placeholder="Password" required="">
 			<div class="checkbox mb-3">
 				<label>
-          <input type="checkbox" value="remember-me"> Remember me
-        </label>
+          			<input type="checkbox" value="remember-me" /> [[#{index.remember}]]
+        		</label>
 			</div>
-			<button class="btn btn-lg btn-primary btn-block" type="submit">Sign in</button>
+			<button class="btn btn-lg btn-primary btn-block" type="submit" th:text="#{index.signin}">Sign in</button>
 			<p class="mt-5 mb-3 text-muted">© 2017-2018</p>
-			<a class="btn btn-sm">中文</a>
-			<a class="btn btn-sm">English</a>
+			<a class="btn btn-sm" th:href="@{/index.html(l='zh_CN')}">中文</a>
+			<a class="btn btn-sm" th:href="@{/index.html(l='en_US')}">English</a>
 		</form>
 
 	</body>
